--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/new.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/new.html.twig
@@ -4,7 +4,7 @@
     <div class="page-header">
         <h1>Create a New Household</h1>
     </div>
-
+    <div class="col-xs-4">
     {{ form(form) }}
 
     <ul class="record_actions">
@@ -14,4 +14,5 @@
             </a>
         </li>
     </ul>
+    </div>
 {% endblock %}
