Fix incorrect contextual alert CSS class in form layout.
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/app/Resources/views/form_div_layout.html.twig
+++ b/app/Resources/views/form_div_layout.html.twig
@@ -355,7 +355,7 @@
 {% block form_errors %}
 {% spaceless %}
     {% if errors|length > 0 %}
-    <div class="alert alert-error">
+    <div class="alert alert-danger">
         <ul>
             {% for error in errors %}
                 <li>{{ error.message }}</li>
