Change postalnews field on Person to newsPref, indicating Person's newsletter preference.
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Person/show.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Person/show.html.twig
@@ -70,8 +70,18 @@
                 </td>
             </tr>
             <tr>
-                <th>Postalnews</th>
-                <td>{{ entity.postalnews }}</td>
+                <th>Newsletter Preference</th>
+                <td>
+                    {% if entity.newsPref == 'postal' %}
+                        Postal
+                    {% elseif entity.newsPref == 'email' %}
+                        Email
+                    {% elseif entity.newsPref == 'both' %}
+                        Postal &amp; Email
+                    {% else %}
+                        Does not receive newsletter
+                    {% endif %}
+                </td>
             </tr>
             <tr>
                 <th>Web URL</th>
