Move Household detail panels to a separate, reusable Twig template.
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/show.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/show.html.twig
@@ -6,131 +6,7 @@
         <h4 class="text-muted">Postal Name: <small>{{ entity.postalname }}</small>
     </div>
 
-    <div class="panel panel-primary">
-        <header class="panel-heading"><span class="glyphicon glyphicon-home"></span> Residences</header>
-        <table class="table">
-            <thead>
-                <th>Type</th>
-                <th>Address</th>
-                <th>Phones</th>
-                <th>Since</th>
-                <th>Season(s)</th>
-                <th>Actions</th>
-            </thead>
-            <tbody>
-                {% for residence in entity.residences %}
-                <tr>
-                    <td>
-                        {% if residence.primary %}
-                            <span class="label label-success">Primary</span>
-                        {% else %}
-                            <span class="label">Secondary</span>
-                        {% endif %}
-                    </td>
-                    <td>
-                        <a href="{{ path('UMRA_Residence_show', { 'id': residence.id }) }}">
-                            <address>
-                                {{ residence.address1 }}<br />
-                                {% if residence.address2 %}
-                                    {{ residence.address2 }}<br />
-                                {% endif %}
-                                {% if residence.address3 %}
-                                    {{ residence.address3 }}<br />
-                                {% endif %}
-                                {{ residence. city }}{% if residence.state %}, {{ residence.state }}{% endif %} {{ residence.zip }}<br />
-                                {{ residence.country }}
-                            </address>
-                        </a>
-                    </td>
-                    <td>
-                        <ul class="list-unstyled">
-                            {% for phone in residence.phones %}
-                                <li><a href="{{ path('UMRA_Phone_show', { 'id': phone.id }) }}">{{ phone.phnumber }}</a></li>
-                            {% endfor %}
-                            <li>
-                                <a href="{{ path('UMRA_Residence_Phone_new', { 'residenceId': residence.id }) }}">
-                                    <small><span class="glyphicon glyphicon-plus"></span> Add</small>
-                                </a>
-                            </li>
-                        </ul>
-                    </td>
-                    <td>{% if residence.since %}{{ residence.since|date('m/d/Y') }}{% endif %}</td>
-                    <td>{{ residence.forseason }}</td>
-                    <td>
-                    <ul class="list-inline">
-                        <li>
-                            <a class="btn btn-primary btn-xs" href="{{ path('UMRA_Residence_show', { 'id': residence.id }) }}">View</a>
-                        </li>
-                        <li>
-                            <a class="btn btn-warning btn-xs" href="{{ path('UMRA_Residence_edit', { 'id': residence.id }) }}">Edit</a>
-                        </li>
-                    </ul>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <footer class="panel-footer">
-            <a class="btn btn-primary" href="{{ path('UMRA_Household_Residence_new', { 'householdId': entity.id }) }}"><span class="glyphicon glyphicon-plus"></span> Add a Residence</a>
-        </footer>
-    </div>
-
-    <div class="panel panel-primary">
-        <header class="panel-heading"><span class="glyphicon glyphicon-user"></span> People</header>
-        <table class="table">
-            <thead>
-                <th>Full Name</th>
-                <th>UMRA Status</th>
-                <th>Member Since</th>
-                <th>Email Addresses</th>
-                <th>Phone Numbers</th>
-            </thead>
-            <tbody>
-                {% for person in entity.persons %}
-                <tr>
-                    <td><a href="{{ url('UMRA_Person_show', { id: person.id }) }}">{{ person.fullname }}</a></td>
-                    <td>
-                    {% if person.activenow %}
-                        <span class="label label-success">Active</span>
-                    {% endif %}
-                    </td>
-                    <td>{{ person.membersince | date("m/d/Y") }}</td>
-                    <td>
-                        <ul class="list-unstyled">
-                            {% for email in person.emails %}
-                            <li>
-                                <a href="{{ path('UMRA_Email_show', {'id': email.id }) }}">
-                                    {{ email.email }}
-                                </a> - {{ email.type }}
-                            </li>
-                            {% endfor %}
-                            <li>
-                                <a href="{{ path('UMRA_Person_Email_new', { 'personId': person.id }) }}">
-                                    <small><span class="glyphicon glyphicon-plus"></span> Add</small>
-                                </a>
-                            </li>
-                        </ul>
-                    </td>
-                    <td>
-                        <ul class="list-unstyled">
-                            {% for phone in person.phones %}
-                                <li><a href="{{ path('UMRA_Phone_show', { 'id': phone.id }) }}">{{ phone.phnumber }}</a> - {{ phone.phtype }}</li>
-                            {% endfor %}
-                            <li>
-                                <a href="{{ path('UMRA_Person_Phone_new', { 'personId': person.id }) }}">
-                                    <small><span class="glyphicon glyphicon-plus"></span> Add</small>
-                                </a>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <footer class="panel-footer">
-            <a class="btn btn-primary" href="{{ path('UMRA_Household_Person_new', {'householdId': entity.id }) }}"><span class="glyphicon glyphicon-plus"></span> Add a Person</a>
-        </footer>
-    </div>
+    {% include 'UMRAMemberBundle:Household:detail.html.twig' %}
 
     <ul class="list-inline">
         <li>
