--- a/src/UMRA/Bundle/MemberBundle/Resources/views/nav.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/nav.html.twig
@@ -2,6 +2,7 @@
 
 {% block body %}
   <div id="page-content-container" class="row">
+    {% if is_granted('ROLE_ADMIN') %}
     <div class="col-sm-3 col-lg-2">
       <nav class="well sidebar-nav">
         <ul class="nav nav-pills nav-stacked">
@@ -16,7 +17,14 @@
       </nav><!--/.well -->
       {% block sidebar %}{% endblock %}
     </div>
-    <section class="col-sm-9 col-lg-10">
+    {% endif %}
+    <section
+      {% if is_granted('ROLE_ADMIN') %}
+        class="col-sm-9 col-lg-10"
+      {% else %}
+        class="col-xs-12"
+      {% endif %}
+    >
     {% block modulecontent %}
         <div class="row">
         </div>
