--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Person/profile.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Person/profile.html.twig
@@ -21,7 +21,7 @@
         </div>
         <div class="tab-pane fade" id="details">
             <br />
-            <div class="col-sm-6">
+            <div class="col-sm-6 col-md-4">
                 <div class="panel panel-default">
                     <header class="panel-heading">
                         <h3 class="panel-title">Profile Details</h3>
@@ -32,7 +32,7 @@
                     </form>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-6 col-md-4">
                 <div class="panel panel-warning">
                     <header class="panel-heading">
                         <h3 class="panel-title">Change Password</h3>
