Hide records sidebar for users without ROLE_CAN_VIEW_OTHER_HOUSEHOLD
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/nav.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/nav.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
   <div id="page-content-container" class="row">
-    {% if is_granted('ROLE_ADMIN') %}
+    {% if is_granted('ROLE_CAN_VIEW_OTHER_HOUSEHOLD') %}
     <div class="col-sm-3 col-lg-2">
       <nav class="well sidebar-nav">
         <ul class="nav nav-pills nav-stacked">
@@ -19,7 +19,7 @@
     </div>
     {% endif %}
     <section
-      {% if is_granted('ROLE_ADMIN') %}
+      {% if is_granted('ROLE_CAN_VIEW_OTHER_HOUSEHOLD') %}
         class="col-sm-9 col-lg-10"
       {% else %}
         class="col-xs-12"
