Hide edit & delete buttons on person records pages for users without permission (not their own record and don't have ROLE_CAN_EDIT_OTHER_PERSON)
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Person/edit.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Person/edit.html.twig
@@ -17,6 +17,8 @@
                 Back to household
             </a>
         </li>
+        {% if is_granted('ROLE_CAN_EDIT_OTHER_PERSON') %}
         <li>{{ form(delete_form) }}</li>
+        {% endif %}
     </ul>
 {% endblock %}
