--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="umramember">
     <head>
         <meta charset="UTF-8" />
         <meta name="robots" content="noindex,nofollow" />
@@ -119,6 +119,13 @@
         <script type="text/javascript" src="{{ asset('js/handlebars-v1.3.0.js') }}"></script>
         <script type="text/javascript" src="{{ asset('js/typeahead.bundle.min.js') }}"></script>
         <script type="text/javascript" src="{{ asset('js/peopleSearch.js') }}"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular-route.min.js"></script>
+        <script type="text/javascript" src="{{ asset('js/umramember.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('js/umramember.controllers.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('js/umramember.directives.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('js/umramember.filters.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('js/umramember.services.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
